--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-messenger4j.appSecret = secret
-messenger4j.verifyToken = token
-messenger4j.pageAccessToken = access
+messenger4j.appSecret = ${MESSENGER_APP_SECRET}
+messenger4j.verifyToken = ${MESSENGER_VERIFY_TOKEN}
+messenger4j.pageAccessToken = ${MESSENGER_PAGE_ACCESS_TOKEN}
 logging.level.com.github.messenger4j=INFO
